--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,46 +1,66 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion versions.compileSdk
     defaultConfig {
-        applicationId "com.example.chyngyz.auapp"
-        minSdkVersion 15
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        applicationId "com.auapp"
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "BASE_URL", "\"${base_url}\""
+        buildConfigField "String", "BASE_ENDPOINT", "\"${base_endpoint}\""
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            applicationIdSuffix ".dev"
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility versions.java
+        targetCompatibility versions.java
     }
 }
+
+
+apply from: rootProject.file('libraries.gradle')
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation libs.appCompat
+    implementation libs.design
+    implementation libs.annotation
+    implementation libs.design
+    implementation libs.constraint
 
-    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
-    implementation "com.android.support:support-annotations:$supportLibraryVersion"
-    implementation "com.android.support:design:$supportLibraryVersion"
+    implementation libs.dagger
+    annotationProcessor libs.daggerProcessor
 
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation libs.retrofit
+    implementation libs.retrofitConverter
+    implementation libs.retrofitAdapter
+    implementation libs.rxAndroid
+    implementation libs.okhttp
 
-    implementation("com.mikepenz:materialdrawer:$drawerVersion") {
+    implementation(libs.drawer) {
         transitive = true
     }
 
-    //butterknife
-    implementation "com.jakewharton:butterknife:$butterKnifeVersion"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+    implementation libs.butterKnife
+    annotationProcessor libs.butterKnifeCompiler
+
+    //tests
+    testImplementation libs.junit
+    androidTestImplementation libs.runner
+    androidTestImplementation libs.espressoCore
 }
