--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    apply from: rootProject.file('libraries.gradle')
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        
-
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath "io.realm:realm-gradle-plugin:${versions.realmPlugin}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,15 +20,8 @@ allprojects {
         google()
         jcenter()
     }
-}
 
-ext {
-    compileSdkVersion = 27
-    targetSdkVersion = 27
-    supportLibraryVersion = '27.1.1'
-    drawerVersion = '6.0.7@aar'
-    retrofitVersion = '2.3.0'
-    butterKnifeVersion = '8.8.1'
+    apply from: rootProject.file('libraries.gradle')
 }
 
 task clean(type: Delete) {
