--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ org.gradle.daemon=true
 org.gradle.configureondemand=true
 
 # BASE URL
-base_url = http://au.kg
-base_endpoint = /mobile-api.php
+base_url = *
+base_endpoint = *
